	* Prompt to authorize MSN buddies who added you while you
	  were offline (Thanks Jason Willis)
	* Option to globally disable Buddy Icon animation (Thanks
	  Luke Schierer)
	* Numerous bugfixes
	* Yahoo! will tell you when your buddies are playing Yahoo! 
 	  games and give you the ability to join them
	* Yahoo! can receive offline messages
	
version 0.53 (02/28/2002):
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Slovak translation added (Thanks Daniel Rezny)
	* Minor bug fixes re: queued away messages
	* Better buddy icon transparency (for real this time ;-))
	* Ability to change formatting of Oscar screen name
	* Better selection in HTML widget (Thanks BMiller)
	* New icons for ICQ (Thanks Kevin Miller)
	* Editable buddy pounces (Thanks Jason Willis)
	* Server side buddy lists in Oscar (Thanks KingAnt :-))
	* Fix for the chatlist plugin
	* Typing Notification (AIM Direct Connect, Yahoo, MSN)
	* IM Images (Receive Only)
	* Prettier GtkImHtml selection

version 0.52 (02/17/2002):
	* Better buddy icon transparency (thanks SeanEgan)
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Fixed a little bug with connecting via proxy (thanks
	  for reminding me of this, Manish Singh)
	* Updated Simplified Chinese Translation (Thanks Rocky S. Lee)
	* Updated German Translation (Thanks Karsten Weiss)
	* Yahoo! Messenger works again
	* MSN Works again
	* Can register a new user with a Jabber Server (JSeymour)
	* Can now set Jabber vCards (JSeymour)
	* Jabber vCards are now shown in their entirety (JSeymour)
	* Various jabber bug fixes/enhancements (JSeymour)

version 0.51 (01/24/2002):
	* Arrow buttons in log viewer and some other dialogs
	  work (thanks Ben Miller)
	* Option to only send auto-response while idle (thanks
	  Sean Egan)
	* Control time between sending auto-responses (thanks
	  Mark Doliner)
	* Should be able to sign on to Oscar using Mac OS X
	  (thanks Fingolfin, Vincas Ciziunas, et al.)
	* Finnish translation added (Thanks Tero Kuusela)